# codyco-modules

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  DEPRECATED_README.md  README  README.md
legacy/misc/ftDumper/: CMakeLists.txt
legacy/misc/randomJointPositions/: CMakeLists.txt
legacy/tests/inverseDynamicsTest/: CMakeLists.txt
legacy/tests/wholeBodyModelIcubTest/: CMakeLists.txt
src/: CMakeLists.txt
src/FTSDebugger/: CMakeLists.txt
src/FTSDebugger/app/: CMakeLists.txt
src/FTSDebugger/matlab/: script_analysis.m
src/comStepper/: CMakeLists.txt
src/comStepper/app/: CMakeLists.txt
src/comStepper/src/: comStepper.cpp  comStepper.h  main.cpp  util.h
src/devices/: CMakeLists.txt
src/devices/floatingBaseEstimator/: CMakeLists.txt  floatingBaseEstimator.cpp  floatingBaseEstimator.h  floatingbaseestimator.ini  floatingbaseestimator.xml
src/devices/genericSensorClient/: CMakeLists.txt
src/devices/jointTorqueControl/: CMakeLists.txt  JointTorqueControl.cpp  JointTorqueControl.h  PassThroughControlBoard.cpp  PassThroughControlBoard.h  jointTorqueControl.ini
src/devices/virtualAnalogClient/: CMakeLists.txt  VirtualAnalogClient.cpp  VirtualAnalogClient.h
src/devices/virtualAnalogRemapper/: CMakeLists.txt  VirtualAnalogRemapper.cpp  VirtualAnalogRemapper.h
src/devices/wholeBodyDynamics/: CMakeLists.txt  GravityCompensationHelpers.cpp  SixAxisForceTorqueMeasureHelpers.cpp  SixAxisForceTorqueMeasureHelpers.h  WholeBodyDynamicsDevice.cpp  WholeBodyDynamicsDevice.h  wholebodydynamics-icubheidelberg01.xml  wholebodydynamics.xml
src/iCub_description/: README
src/iCub_description/urdf/: icub.dae  icub.xml  icub_idyn_wm.xml  icub_simple.dae  icub_simple.xml  icub_simple_collision.dae  icub_simple_paris.xml
src/iCub_description/urdf_get_meshes/: CMakeLists.txt  README  urdf_get_meshes.cpp
src/iCub_description/urdf_iDyn/: CMakeLists.txt  icub_urdf_from_iDyn.cpp
src/iCub_description/urdf_paris/: icub.xml  icub_simple.xml  icub_simple_collision.dae
src/iDynTree/: CMakeLists.txt
src/iDynTree/cmake/: CMakeCache.txt  cmake_install.cmake  iDynTreeConfig.cmake  icub-export-build.cmake
src/iDynTree/icub_kdl/: .gitignore  README.md
src/iDynTree/src/: DynTree.cpp  iCubTree.cpp  iDyn2KDL.cpp  iDynTree.cpp  icub_urdf_from_iDyn.cpp  idyn2kdl_icub.cpp  untitled  yarp_kdl.cpp
src/idl/: CMakeLists.txt
src/idl/floatingBaseEstimatorRPC/: CMakeLists.txt
src/idl/floatingBaseEstimator_IDLServer/: CMakeLists.txt  floatingBaseEstimator_IDLServer.thrift
src/idl/wholeBodyDynamicsSettings/: CMakeLists.txt  wholeBodyDynamicsSettings.thrift
src/idl/wholeBodyDynamics_IDLServer/: CMakeLists.txt  wholeBodyDynamics_IDLServer.thrift
src/inertiaObserver/: CMakeLists.txt  cartesian_get_pose.cpp
src/inertiaObserver/src/: MatVetIO.cpp  iCubStateEstimator.cpp  iCubStateEstimator.h  main.cpp  observerThread.cpp  observerThread.h  onlineEstimator_cpp  onlineEstimator_h
src/libraries/: CMakeLists.txt
src/libraries/codyco-commons/: CMakeLists.txt
src/libraries/ctrlLibRT/: CMakeLists.txt
src/libraries/iDynTree/: CMakeLists.txt
src/libraries/inverseKinematics/: CMakeLists.txt
src/libraries/libCoDyCo/: CMakeLists.txt
src/libraries/modHelp/: CMakeLists.txt
src/libraries/motorFrictionIdentificationLib/: CMakeLists.txt
src/libraries/paramHelp/: CMakeLists.txt
src/libraries/wholeBodyInterface/: CMakeLists.txt
src/libraries/wholeBodyInterfaceIcub/: CMakeLists.txt
src/linearRegressorsAdaptiveControl/: CMakeLists.txt
src/linearRegressorsAdaptiveControl/src/: linearRegressorsAdaptiveControlMain.cpp  linearRegressorsAdaptiveControlModule.cpp  linearRegressorsAdaptiveControlThread.cpp
src/locomotionControl/: CMakeLists.txt
src/locomotionControl/src/: equalityQP.cpp  locomotionModule.cpp  locomotionThread.cpp  main.cpp
src/locomotionPlanner/: CMakeLists.txt
src/locomotionPlanner/src/: locomotionPlannerModule.cpp  locomotionPlannerThread.cpp  main.cpp
src/misc/Pid/: CMakeLists.txt
src/misc/codyco-deliverable/: CMakeLists.txt  main.cpp
src/misc/ftDumper/: CMakeLists.txt
src/misc/iCub_description/: CMakeLists.txt  README
src/misc/iDynTreeDraghi/: CMakeLists.txt  main.cpp
src/misc/linearRegressorsAdaptiveControl/: CMakeLists.txt
src/misc/randomJointPositions/: randomJointPositions.cpp
src/misc/randomShoulderMovements/: CMakeLists.txt  main.cpp
src/misc/reachRandomJointPositions/: CMakeLists.txt
src/misc/skinContactGenerator/: CMakeLists.txt  skinContactGenerator.thrift  skinContactGenerator_thrift.cmake
src/misc/slotineAdaptiveControl/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/RedBallGraspDemo/: CMakeLists.txt
src/modules/adaptiveControl/: CMakeLists.txt
src/modules/codycoCoordinatorDemo1Y/: CMakeLists.txt  codycoCoordinatorDemo1Y.lua  fsm_codycoCoordinatorDemo1Y.lua
src/modules/codycoCoordinatorDemoY2/: CMakeLists.txt  codycoTrajGenDemoY2.xml
src/modules/codycoTrajGenDemoY2/: CMakeLists.txt  codycoTrajGenDemoY2.xml
src/modules/comStepper/: CMakeLists.txt
src/modules/eventRepeater/: CMakeLists.txt
src/modules/footOrientationEstimator/: CMakeLists.txt
src/modules/graspAndStepDemo/: APP_README.md  CMakeLists.txt  README.md
src/modules/icubWalkingIK/: CMakeLists.txt  README.md
src/python/: 01_standing_flat_ground.py  01_standing_uneven_ground.py  02_standing_touching_wall_5N.py  03_standing_touching_wall_5N_head_stabiliz.py  04_standing_touching_table_5N_head_stabiliz.py  05_standing_touching_table_5N_head_stabiliz_both_hands.py  06_standing_touching_table.py  controlfsm.py  deliverable1Y_1.py  demo1Y_pushing.py  guitk.py  guitkctrl.py  pycontrol_smooth_contact_force.py
src/reachComBalance/: CMakeLists.txt
src/scripts/: CMakeLists.txt  idleLegJoints.sh  twoFeetStandingIdleAndCalib.sh
src/sensorsInterfaces/: CMakeLists.txt
src/simulink/: CMakeLists.txt  README.md  README.txt  startup_wbclib.m  startup_wbitoolbox.m
src/tests/: CMakeLists.txt
src/wbi/: CMakeLists.txt
src/wbiy/: CMakeLists.txt
src/wholeBodyInterfaceYarpTest/: CMakeLists.txt  main.cpp
(+1617 files in other folders)
