# Copyright: (C) 2013 CoDyCo Consortium
# Authors: Serena Ivaldi - serena.ivaldi@isir.upmc.fr
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

# add subdirectories with libraries here
# example: 
# ADD_SUBDIRECTORY(myLibrary)
# order matters: if library B depends on library A, put
# ADD_SUBDIRECTORY(A)
# ADD_SUBDIRECTORY(B)

add_subdirectory(wholeBodyInterface)
add_subdirectory(modHelp)
add_subdirectory(motorFrictionIdentificationLib)
add_subdirectory(wholeBodyInterfaceIcub)


